--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -56,6 +56,14 @@
     ]
   bind_python: true
 
+- name: "addcmul"
+  signature: "Tensor (Tensor input, Tensor tensor1, Tensor tensor2, *, Scalar value=1) => Addcmul"
+  bind_python: true
+
+- name: "addcmul_"
+  signature: "Tensor (Tensor input, Tensor tensor1, Tensor tensor2, *, Scalar value=1) => InplaceAddcmul"
+  bind_python: true
+
 - name: "div"
   signature:
     [
